refactor, updated basics + topics folders

--- a/topics/box2D-example/index.html
+++ b/topics/box2D-example/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script language="javascript" type="text/javascript" src="../p5.js"></script>
+  <script language="javascript" type="text/javascript" src="../../libs/p5.js"></script>
   <script language="javascript" type="text/javascript" src="./lib/box2d-html5.js"></script>
   <script language="javascript" type="text/javascript" src="./lib/box2d-helper.js"></script>
   <script language="javascript" type="text/javascript" src="boundary.js"></script>
