--- a/topics/circlepack-example/index.html
+++ b/topics/circlepack-example/index.html
@@ -1,8 +1,7 @@
 <html>
 	<head>
 		<title>P5 Test</title>
-		<link rel="stylesheet" type="text/css" href="../assets/style.css">
-		<script language="javascript" type="text/javascript" src="../p5.js"></script>
+		<script language="javascript" type="text/javascript" src="../../libs/p5.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 	</head>
 
