--- a/topics/ios-touch-example/index.html
+++ b/topics/ios-touch-example/index.html
@@ -6,7 +6,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<link rel="apple-touch-startup-image" href="startup-image.png">
-  	<script language="javascript" type="text/javascript" src="../p5.js"></script>
+  	<script language="javascript" type="text/javascript" src="../../libs/p5.js"></script>
   	<script language="javascript" type="text/javascript" src="sketch.js"></script>
   	<!-- this line removes any default padding and style. you might only need one of these values set. -->
   	<style> body {padding: 0; margin: 0;} </style>
