--- a/topics/tween-example/index.html
+++ b/topics/tween-example/index.html
@@ -1,8 +1,6 @@
 <html>
 <head>
-  <script language="javascript" type="text/javascript" src="../p5.js"></script>
-  <!--<script language="javascript" src="../addons/p5.dom.js"></script>-->
-  <!--<script language="javascript" src="../addons/p5.sound.js"></script>-->
+  <script language="javascript" type="text/javascript" src="../../libs/p5.js"></script>
   <script language="javascript" type="text/javascript" src="Tween.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <style> body {padding: 0; margin: 0;} </style>
