added API request example

--- a/data/003-api/index.html
+++ b/data/003-api/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0;} </style>
+    <style> 
+      @import url(https://fonts.googleapis.com/css?family=Lato:300);
+      body {
+        padding: 0; margin: 0;
+        font-family: 'Lato', sans-serif;font-weight:lighter;
+      } 
+    </style>
     <script src="../../libs/p5.js"></script>
     <script src="../../libs/p5.dom.js"></script>
     <script src="../../libs/p5.sound.js"></script>
