AR Workshop demo links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<a href="https://stc.github.io/mome-creative-coding-course-p5js/computer-vision/MarkerTracking">markers</a>
+<p>Augmented Reality Workshop Demos (js)</p>
+<p><a href="stc/mome-creative-coding-course-p5js/tree/master/computer-vision/BrightestPoint">Brightest Point></a></p>
+<p><a href="https://stc.github.io/mome-creative-coding-course-p5js/computer-vision/MarkerTracking">Marker Tracking</a></p>
+<p><a href="https://stc.github.io/mome-creative-coding-course-p5js/computer-vision/PoseTracking">Pose Tracking</a></p>
+
+
