added WebAR example links

--- a/index.html
+++ b/index.html
@@ -3,4 +3,9 @@
 <p><a href="https://stc.github.io/cc-p5/computer-vision/MarkerTracking">Marker Tracking</a></p>
 <p><a href="https://stc.github.io/cc-p5/computer-vision/PoseTracking">Pose Tracking</a></p>
 <p><a href="http://www.createwebxr.com/webAR.html">WebAR</a></p>
+<br>
+<p>WebAR examples & ThreeJS (works with ARKit / ARCore compatible device and <a href="https://github.com/google-ar/three.ar.js">this custom browser</a>)</p>
+<p><a href="http://binaura.net/stc/tmp/threear/examples/graffiti.html">Graffiti</a></p>
+<p><a href="http://binaura.net/stc/tmp/threear/examples/record-at-camera.html">Record at camera</a></p>
+<p><a href="http://binaura.net/stc/tmp/threear/examples/spawn-at-surface.html">Spawn at surface</a></p>
 
