--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@
 <p><a href="http://binaura.net/stc/tmp/threear/examples/record-at-camera.html">Record at camera</a></p>
 <p><a href="http://binaura.net/stc/tmp/threear/examples/spawn-at-surface.html">Spawn at surface</a></p>
 
+<p><a href="https://stc.github.io/cc-p5/misc/HandSkeleton-tfjs">Hand Skeleton</a></p>
+
